[project]
name = "rt-waveform-spectrogram"
version = "0.1.0"
description = "Real-time waveform and spectrogram visualization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "sounddevice",
    "pyqtgraph",
    "PyQt6",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
